src/main/java/com/example/credit_service_project/service/errors/exceptions/AccountNotFoundException.java
package com.example.credit_service_project.service.errors.exceptions;

public class AccountNotFoundException extends RuntimeException {
    public AccountNotFoundException(String message) {
        super(message);
    }
}
